$NetBSD: CHANGES-2015,v 1.2120 2015/05/06 07:36:33 wiz Exp $

Changes to the packages collection and infrastructure in 2015:

	Updated www/p5-Catalyst-Engine-JobQueue-POE to 0.0.4 [mef 2015-01-01]
	Updated lang/gcc46 to 4.6.4nb3 [ryoon 2015-01-01]
	Added lang/gcc46-libs version 4.6.4nb4 [ryoon 2015-01-01]
	Updated www/p5-Catalyst-Plugin-Authorization-ACL to 0.16 [mef 2015-01-01]
	Updated www/p5-Catalyst-Plugin-ConfigLoader to 0.34 [mef 2015-01-01]
	Updated www/p5-Catalyst-Plugin-Static-Simple to 0.33 [mef 2015-01-01]
	Updated www/p5-Catalyst-Plugin-StatusMessage to 1.002000 [mef 2015-01-01]
	Updated www/p5-Catalyst-View-Mason to 0.19 [mef 2015-01-01]
	Updated www/p5-Catalyst-View-TT to 0.42 [mef 2015-01-01]
	Updated www/p5-CatalystX-CRUD-Controller-REST to 0.004 [mef 2015-01-01]
	Updated www/p5-CatalystX-CRUD-YUI to 0.031 [mef 2015-01-01]
	Updated www/p5-Continuity to 1.6 [mef 2015-01-01]
	Updated www/p5-Cookie-Baker to 0.05 [mef 2015-01-01]
	Updated www/p5-FCGI-ProcManager to 0.25 [mef 2015-01-01]
	Updated www/p5-HTML-FillInForm to 2.21 [mef 2015-01-01]
	Updated textproc/mdoclint to 1.32 [jnemeth 2015-01-01]
	Updated pkgtools/pkglint to 4.150 [dholland 2015-01-01]
	Added devel/py-zanata-python-client version 1.3.18 [ryoon 2015-01-01]
	Updated net/mikutter to 3.2.1 [obache 2015-01-01]
	Updated textproc/py-pygments to 2.0.1nb1 [wiz 2015-01-01]
	mk/bsd.pkg.mk: remove pkgviews support [wiz 2015-01-01]
	Updated www/p5-CGI-Simple to 1.115 [mef 2015-01-01]
	Updated www/php-ja-wordpress to 4.1 [ryoon 2015-01-01]
	Added databases/db6 version 6.1.19 [ryoon 2015-01-01]
	Updated devel/acr to 0.9.9 [wiz 2015-01-01]
	Updated fonts/umefont-ttf to 0.468 [ryoon 2015-01-01]
	Updated lang/python33 to 3.3.6 [he 2015-01-01]
	Updated print/cups to 2.0.1 [christos 2015-01-01]
	Updated www/seamonkey to 2.31 [ryoon 2015-01-02]
	Updated devel/py-msgpack to 0.4.2nb1 [obache 2015-01-02]
	Updated lang/ruby21-base to 2.1.5nb1 [ryoon 2015-01-02]